<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kasmee</string>

    <!-- Title -->
    <string name="title_home">Beranda</string>
    <string name="title_cash">Kas</string>
    <string name="title_transactions">Transaksi</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Pengaturan</string>

    <!-- Label -->
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_repassword">Re-Password</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_re_new_password">Re-Enter New Password</string>
    <string name="label_or">or</string>

    <!-- Hint -->
    <string name="hint_email_address" tools:ignore="TypographyEllipsis">Enter your email address...</string>
    <string name="hint_password" tools:ignore="TypographyEllipsis">Enter your password...</string>
    <string name="hint_name" tools:ignore="TypographyEllipsis">Enter your name...</string>
    <string name="hint_phone" tools:ignore="TypographyEllipsis">Enter your phone number...</string>
    <string name="hint_repassword" tools:ignore="TypographyEllipsis">Re-Enter your password...</string>
    <string name="hint_old_password" tools:ignore="TypographyEllipsis">Enter your old password...</string>
    <string name="hint_new_password" tools:ignore="TypographyEllipsis">Enter your new password...</string>
    <string name="hint_re_new_password" tools:ignore="TypographyEllipsis">Re-Enter your new password...</string>

    <!-- Button -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Content Description -->
    <string name="logo_description">Kasmee Logo</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back">Back</string>
    <string name="fab_icon">FAB Icon</string>

    <!-- Shared Prefs Key -->
    <string name="user_token">Token</string>

    <!-- Error -->
    <string name="error_name">Nama tidak boleh kosong</string>
    <string name="error_email">Email tidak boleh kosong</string>
    <string name="error_phone_number">Nomor telepon tidak boleh kosong</string>
    <string name="error_password">Password tidak boleh kosong</string>
    <string name="error_confirm_password">Konfirmasi password tidak boleh kosong</string>
    <string name="empty_profile_name">Nama tidak boleh kosong!</string>
    <string name="empty_profile_email">Email tidak boleh kosong!</string>
    <string name="empty_profile_phone">Nomor telepon tidak boleh kosong!</string>
    <string name="empty_field">Input tidak boleh kosong!</string>

    <!-- Label -->
    <string name="today_transaction_label">Transaksi Hari Ini</string>
    <string name="home_cash_label">Buku Kas Kamu</string>
    <string name="income_label">Pemasukan</string>
    <string name="outcome_label">Pengeluaran</string>
    <string name="profit_label">Keuntungan</string>
    <string name="home_transaction_label">Transaksi Terbaru Kamu</string>
    <string name="target_percentage_label">Persentase Target</string>

    <!-- Value -->
    <string name="rupiah_value">Rp %1$s</string>
    <string name="rupiah_value_minus">-Rp %1$s</string>
    <string name="item_cash_title">Judul Kas</string>
    <string name="transaction_date">28/11/2021</string>
    <string name="profit_text">Keuntungan \nRp %1$s</string>
    <string name="loss_text">Kerugian \nRp %1$s</string>
    <string name="target_percentage">%1$s %%</string>

    <!-- Greetings -->
    <string name="home_greetings">Halo, %1$s</string>
    <string name="home_sub_greetings">Apakah kamu sudah mencatat keuanganmu hari ini?</string>

    <!-- Other -->
    <string name="home_no_transaction">Hari ini kamu belum melakukan transaksi</string>
    <string name="no_transaction_image">No Transaction Image</string>
    <string name="no_cash_image">No Cash Image</string>
    <string name="no_cash_message">Maaf saat ini kamu belum memiliki buku kas</string>
    <string name="cash_icon_image">Cash Icon Image</string>
    <string name="add_transaction">Tambah Transaksi</string>
    <string name="error">Gagal mengambil data</string>
    <string name="retry">Coba lagi</string>
    <string name="shimmer">Shimmer</string>

    <!-- Profile Fragment -->
    <string name="edit_profile">Edit Profil</string>
    <string name="change_password">Ganti Password</string>
    <string name="settings">Pengaturan</string>
    <string name="button_logout_text">Logout</string>

    <!-- Notification -->
    <string name="pref_key_notify_daily_reminder">key_daily_reminder_notification</string>
    <string name="pref_key_notify_target_reminder">key_target_reminder_notification</string>
    <string name="pref_notify_daily_reminder_title">Pengingat harian transaksi</string>
    <string name="pref_notify_target_reminder_title">Pengingat target terpenuhi</string>
    <string name="pref_notify_name">Notifikasi</string>

    <string name="pref_notify_off">off</string>
    <string name="pref_notify_five">17</string>
    <string name="pref_notify_six">18</string>
    <string name="pref_notify_seven">19</string>
    <string name="pref_notify_eight">20</string>
    <string name="pref_notify_nine">21</string>

    <string name="notify_at_off">Tidak ada alarm</string>
    <string name="notify_at_five">17:00</string>
    <string name="notify_at_six">18:00</string>
    <string name="notify_at_seven">19:00</string>
    <string name="notify_at_eight">20:00</string>
    <string name="notify_at_nine">21:00</string>

    <string name="notify_daily_reminder_title">Kasmee</string>
    <string name="notify_daily_reminder_content">Sudahkah kamu mencatat transaksi hari ini?</string>
    <string name="notify_target_reminder_title">Target kas %1$s terpenuhi!</string>
    <string name="notify_target_reminder_content">Teruslah mencatat!</string>

    <!-- Detail Cash Activity -->
    <string name="detail_cash_title">Detail Buku Kas</string>
    <string name="target_label">Target</string>
    <string name="percentage_detail">(Persentase capaian %1$s %%)</string>
    <string name="detail_transaction_label">Transaksi Buku Kas</string>

    <!-- Dialog Alert -->
    <string name="delete_cash_alert">Apakah kamu yakin menghapus buku kas ini?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>

    <!-- Snack Bar -->
    <string name="transaction_deleted">Transaksi berhasil dihapus</string>

    <!-- Detail Transaction -->
    <string name="detail_transaction_title">Detail Transaksi</string>
    <string name="green_arrow_up">Green Arrow Up</string>
    <string name="description_label">Keterangan</string>
    <string name="dash">-</string>
    <string name="close_button">Close Button</string>
    <string name="btn_edit_text">Ubah</string>
    <string name="btn_delete_text">Hapus</string>

    <!-- Add Cash -->
    <string name="empty_cash_name">Nama buku kas tidak boleh kosong!</string>
    <string name="zero_target_error">Target buku kas tidak bernilai nol!</string>
    <string name="check_input_message">Mohon isi data buku kas dengan valid!</string>
    <string name="add_cash_title">Tambah Buku Kas</string>
    <string name="cash_name_label">Nama Buku Kas</string>
    <string name="cash_target_label">Target Capaian</string>
    <string name="cash_name_hint" tools:ignore="TypographyEllipsis">Isi nama buku kas...</string>
    <string name="cash_target_hint" tools:ignore="TypographyEllipsis">Isi target capaian...</string>
    <string name="btn_add_text">Tambah</string>
    <string name="btn_cancel_text">Batal</string>

    <!-- FAB Detail Cash -->
    <string name="edit_cash">Edit Buku Kas</string>
    <string name="delete_cash">Hapus Buku Kas</string>

    <!-- Add Transaction -->
    <string name="income_hint" tools:ignore="TypographyEllipsis">Isi pemasukan transaksi...</string>
    <string name="outcome_hint" tools:ignore="TypographyEllipsis">Isi pengeluaran transaksi...</string>
    <string name="description_hint" tools:ignore="TypographyEllipsis">Isi keterangan transaksi...</string>
    <string name="income_is_zero">Pemasukan tidak boleh kurang dari nol!</string>
    <string name="invalid_outcome">Nilai pengeluaran tidak valid!</string>

    <!-- Empty Message -->
    <string name="no_transaction_message">Transaksi masih kosong</string>
    <string name="no_transaction_subtitle">Ayo buat buku kas pertama kamu terlebih dahulu!</string>

    <!-- Edit Transaction -->
    <string name="edit_transaction">Ubah Transaksi</string>
    <string name="btn_save_text">Simpan</string>
    <string name="please_fill_income">Mohon isi pemasukan</string>
    <string name="please_fill_outcome">Mohon isi pengeluaran</string>
    <string name="please_fill_description">Mohon isi keterangan</string>
    <string name="_0">0</string>

    <!-- Profile and Password Change Message -->
    <string name="profile_change_success">Profil telah berhasil diubah!</string>
    <string name="password_change_sucess">Password telah berhasil diubah!</string>
    <string name="password_cahnge_failed">Mohon maaf terjadi kesalahan!</string>

</resources>