<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.kasmee.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_cash"
        android:name="com.dicoding.kasmee.ui.main.cash.CashFragment"
        android:label="@string/title_cash"
        tools:layout="@layout/cash_fragment" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.dicoding.kasmee.ui.main.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/transactions_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.kasmee.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

</navigation>