<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="350dp"
    android:paddingBottom="24dp"
    android:theme="@style/Theme.Kasmee">

    <TextView
        android:id="@+id/tv_d"
        style="@style/Typography.BlackText.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/detail_transaction_title"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/tv_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_d"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/tv_income_label"
        style="@style/Typography.GreyText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/income_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_d" />

    <TextView
        android:id="@+id/tv_income"
        style="@style/Typography.BlackText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rupiah_value"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/tv_income_label"
        app:layout_constraintEnd_toStartOf="@+id/iv_arrow_up"
        app:layout_constraintStart_toEndOf="@+id/tv_income_label"
        app:layout_constraintTop_toTopOf="@+id/tv_income_label" />

    <ImageView
        android:id="@+id/iv_arrow_up"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/green_arrow_up"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toBottomOf="@+id/tv_income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_income"
        app:tint="@color/green" />

    <TextView
        android:id="@+id/tv_outcome_label"
        style="@style/Typography.GreyText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/outcome_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_income_label" />

    <TextView
        android:id="@+id/tv_outcome"
        style="@style/Typography.BlackText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rupiah_value_minus"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/tv_outcome_label"
        app:layout_constraintEnd_toStartOf="@+id/iv_arrow_down"
        app:layout_constraintStart_toEndOf="@+id/tv_outcome_label"
        app:layout_constraintTop_toTopOf="@+id/tv_outcome_label" />

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/green_arrow_up"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/tv_outcome"
        app:layout_constraintStart_toStartOf="@+id/iv_arrow_up"
        app:layout_constraintTop_toTopOf="@+id/tv_outcome"
        app:tint="@color/red" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:background="@color/grey"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_arrow_down"
        app:layout_constraintStart_toStartOf="@+id/tv_outcome_label"
        app:layout_constraintTop_toBottomOf="@id/tv_outcome_label" />

    <TextView
        android:id="@+id/tv_profit_label"
        style="@style/Typography.BlackText.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profit_label"
        app:layout_constraintStart_toStartOf="@+id/horizontal_line"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line" />

    <TextView
        android:id="@+id/tv_profit"
        style="@style/Typography.GreenText.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rupiah_value"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_profit_label"
        app:layout_constraintEnd_toEndOf="@+id/horizontal_line"
        app:layout_constraintStart_toEndOf="@+id/tv_profit_label"
        app:layout_constraintTop_toTopOf="@+id/tv_profit_label" />

    <TextView
        android:id="@+id/tv_description_label"
        style="@style/Typography.BlackText.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_label"
        app:layout_constraintStart_toStartOf="@+id/tv_profit_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_profit_label" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/Typography.GreyText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dash"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@+id/tv_profit"
        app:layout_constraintStart_toStartOf="@+id/tv_description_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/Button.Green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_edit_text"
        android:textAllCaps="false"
        app:icon="@drawable/ic_edit"
        app:iconSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Button.Red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_delete_text"
        android:textAllCaps="false"
        app:icon="@drawable/ic_trash_bin"
        app:iconSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="175dp" />

</androidx.constraintlayout.widget.ConstraintLayout>