<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minWidth="350dp"
    android:paddingBottom="24dp"
    android:theme="@style/Theme.Kasmee">

    <TextView
        android:id="@+id/tv_edit_cash_title"
        style="@style/Typography.BlackText.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_cash"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_cash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_cash_title"
        app:tint="@color/grey" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cash_name_label"
        style="@style/Typography.Label"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/cash_name_label"
        app:layout_constraintEnd_toEndOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_cash_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_cash_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        style="@style/Typography.Hint"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_background"
        android:elevation="4dp"
        android:hint="@string/cash_name_hint"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_cash_name_label"
        app:layout_constraintStart_toStartOf="@+id/tv_cash_name_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_cash_name_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_cash_target_label"
        style="@style/Typography.Label"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/cash_target_label"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_target"
        style="@style/Typography.Hint"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:autofillHints="none"
        android:background="@drawable/edit_text_background"
        android:elevation="4dp"
        android:hint="@string/cash_target_hint"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_cash_target_label"
        app:layout_constraintStart_toStartOf="@+id/tv_cash_target_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_cash_target_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        style="@style/Button.Green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_save_text"
        android:textAllCaps="false"
        android:textAppearance="@style/Typography.Button"
        app:icon="@drawable/ic_check_ok"
        app:iconSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_target"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/et_target" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Button.Red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_cancel_text"
        android:textAllCaps="false"
        android:textAppearance="@style/Typography.Button"
        app:icon="@drawable/ic_close"
        app:iconSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/et_target"
        app:layout_constraintTop_toBottomOf="@+id/et_target" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="175dp" />


</androidx.constraintlayout.widget.ConstraintLayout>